[Cocoa] Align <datalist> dropdown keyboard interactions with platform conventions https://bugs.webkit.org/show_bug.cgi?id=286045 rdar://143012287
Reviewed by Abrar Rahman Protyasha.

- Up and down arrow keys should not cycle through options
- Escape key should dismiss the dropdown

* LayoutTests/fast/forms/datalist/datalist-hide-using-escape-key-expected.txt: Added.
* LayoutTests/fast/forms/datalist/datalist-hide-using-escape-key.html: Added.
* LayoutTests/fast/forms/datalist/datalist-textinput-dynamically-add-options-on-keydown.html:
* LayoutTests/fast/forms/datalist/datalist-textinput-keydown-expected.txt:
* LayoutTests/fast/forms/datalist/datalist-textinput-keydown.html:
* LayoutTests/fast/forms/datalist/datalist-textinput-suggestions-order.html:
* LayoutTests/platform/gtk/fast/forms/datalist/datalist-textinput-keydown-expected.txt: Added.
* LayoutTests/platform/ipad/TestExpectations:
* LayoutTests/platform/mac-site-isolation/TestExpectations:
* LayoutTests/resources/ui-helper.js:
(window.UIHelper.waitForDataListSuggestionsToChangeVisibility):
(window.UIHelper.isShowingDateTimePicker): Deleted.
* Source/WebCore/html/TextFieldInputType.cpp:
(WebCore::TextFieldInputType::handleKeydownEvent):
* Source/WebKit/UIProcess/mac/WebDataListSuggestionsDropdownMac.mm:
(-[WKDataListSuggestionsController moveSelectionByDirection:]):
* Source/WebKit/WebProcess/WebCoreSupport/WebDataListSuggestionPicker.cpp:
(WebKit::WebDataListSuggestionPicker::handleKeydownWithIdentifier):

Canonical link: https://commits.webkit.org/289067@main

--- a/LayoutTests/fast/forms/datalist/datalist-textinput-dynamically-add-options-on-keydown.html
+++ b/LayoutTests/fast/forms/datalist/datalist-textinput-dynamically-add-options-on-keydown.html
@@ -35,22 +35,13 @@ function addOptions() {
   document.getElementById('fruits').innerHTML = options;
 }
 
-function waitForDataListSuggestionsToChangeVisibility(visible)
-{
-    return new Promise(async resolve => {
-        while (visible != await UIHelper.isShowingDataListSuggestions())
-            continue;
-        resolve();
-    });
-}
-
 (async () => {
     input = document.getElementById("fruit");
 
     await UIHelper.activateElementAndWaitForInputSession(input);
     await UIHelper.typeCharacter("A");
 
-    await waitForDataListSuggestionsToChangeVisibility(true);
+    await UIHelper.waitForDataListSuggestionsToChangeVisibility(true);
 
     await new Promise(resolve => shouldBecomeEqual("input.value", "'A'", resolve));
 
