--- a/LayoutTests/fast/forms/datalist/datalist-textinput-suggestions-order.html
+++ b/LayoutTests/fast/forms/datalist/datalist-textinput-suggestions-order.html
@@ -41,22 +41,13 @@ if (window.testRunner) {
     testRunner.dumpAsText();
 }
 
-function waitForDataListSuggestionsToChangeVisibility(visible)
-{
-    return new Promise(async resolve => {
-        while (visible != await UIHelper.isShowingDataListSuggestions())
-            continue;
-        resolve();
-    });
-}
-
 function focusInputFieldAndChooseFirstSuggestion()
 {
     return new Promise(async resolve => {
         await UIHelper.activateAndWaitForInputSessionAt(100, 25);
         if (UIHelper.isIOSFamily()) {
             await UIHelper.tapAt(290, 30);
-            await waitForDataListSuggestionsToChangeVisibility(true);
+            await UIHelper.waitForDataListSuggestionsToChangeVisibility(true);
             await UIHelper.activateDataListSuggestion(0);
             await UIHelper.resignFirstResponder();
         } else {
