Remove duplicate `hit-test-end-of-column-with-line-height.html` test https://bugs.webkit.org/show_bug.cgi?id=286229 rdar://143205574
Reviewed by Alan Baradlay.

This patch removes `hit-test-end-of-column-with-line-height.html` test
from `compare-with-old-impl` directory and it is same as one in `multicol`.
Further, I removed `-webkit-` prefixes from remaining one in `multicol` directory.

* LayoutTests/fast/multicol/hit-test-end-of-column-with-line-height.html:
* LayoutTests/fast/multicol/newmulticol/compare-with-old-impl/hit-test-end-of-column-with-line-height-expected.txt: Removed.
* LayoutTests/fast/multicol/newmulticol/compare-with-old-impl/hit-test-end-of-column-with-line-height.html: Removed.

Canonical link: https://commits.webkit.org/289135@main

--- a/LayoutTests/fast/multicol/hit-test-end-of-column-with-line-height.html
+++ b/LayoutTests/fast/multicol/hit-test-end-of-column-with-line-height.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <div id="target" style="
     outline: dashed lightblue;
-    -webkit-columns: 2;
-    -webkit-column-gap: 0;
-    -webkit-column-fill: auto;
+    columns: 2;
+    column-gap: 0;
+    column-fill: auto;
     columns: 2;
     column-gap: 0;
     column-fill: auto;
