--- a/LayoutTests/fast/multicol/overflow-content.html
+++ b/LayoutTests/fast/multicol/overflow-content.html
@@ -3,9 +3,9 @@
         inline-size: 100px;
         border-block-start: 5px solid;
         border-block-end: 15px solid;
-        -webkit-column-count: 2;
-        -webkit-column-gap: 0;
-        -webkit-column-fill: auto;
+        column-count: 2;
+        column-gap: 0;
+        column-fill: auto;
         column-count: 2;
         column-gap: 0;
         column-fill: auto;
@@ -45,7 +45,7 @@
         </div>
     </div>
 </div>
-<div style="-webkit-writing-mode: vertical-rl;">
+<div style="writing-mode: vertical-rl;">
     <div class="container">
         <div class="test" style="block-size: 100px;">
             <div style="block-size: 20px;">
