Remove explicit opt-ins to modern media controls from tests https://bugs.webkit.org/show_bug.cgi?id=202742
Reviewed by Tim Nguyen.

This preference has been long gone.

* LayoutTests/media/ios/viewport-change-with-video.html:
* LayoutTests/media/modern-media-controls/media-documents/background-color-and-centering.html:
* LayoutTests/media/modern-media-controls/media-documents/insert-style-should-not-crash.html:

Canonical link: https://commits.webkit.org/289171@main

--- a/LayoutTests/media/ios/viewport-change-with-video.html
+++ b/LayoutTests/media/ios/viewport-change-with-video.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!-- webkit-test-runner [ modernMediaControls=true useFlexibleViewport=true ] -->
+<!DOCTYPE html><!-- webkit-test-runner [ useFlexibleViewport=true ] -->
 <html>
 <body>
 <p>This tests changing the viewport after a video element. WebKit should not crash.</p>
