--- a/LayoutTests/media/modern-media-controls/media-documents/background-color-and-centering.html
+++ b/LayoutTests/media/modern-media-controls/media-documents/background-color-and-centering.html
@@ -1,2 +1,2 @@
-<!DOCTYPE html><!-- webkit-test-runner [ modernMediaControls=true ] -->
+<!DOCTYPE html>
 <iframe src="../../content/test.mp4" style="width: 360px; height: 400px; border: none; -webkit-clip-path: polygon(0px 0px, 20px 0px, 20px 20px, 0px 20px);"></iframe>
