--- a/LayoutTests/media/modern-media-controls/media-documents/insert-style-should-not-crash.html
+++ b/LayoutTests/media/modern-media-controls/media-documents/insert-style-should-not-crash.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!-- webkit-test-runner [ modernMediaControls=true ] -->
+<!DOCTYPE html>
 <script>
 if (window.testRunner)
     testRunner.dumpAsText();
