[UnifiedPDF] [macOS] Switching from continuous to discrete mode will display the page(s) that are at the top of the window, even if barely visible https://bugs.webkit.org/show_bug.cgi?id=286193 rdar://137608841
Reviewed by Tim Horton.

When switching between display modes, we need to decide an anchor point
to maintain the PDF document's view position post factum. We have been
using the top left (plugin space) as said anchor point, but when
switching out from a continuous display mode, the anchor point often
happens to be in the sliver of the previous page showing in the plugin
space, so after the transition, we end up landing on a previous page.

This patch addresses this logic error by instead adopting Preview's (and
PDFLayerController's) behavior of anchoring around the origin (top left)
of the page visible in the center of the plugin.

To facilitate these changes, we introduce a couple of helper methods,
namely `anchorPointForDocument()` and `pageIndexForCurrentView()`. These
helpers allow both the presentation controller instances to use shared
logic for `pdfPositionForCurrentView()`, so we devirtualize it. Note
that we don't use this new anchoring behavior for layout updates with
autoscaling behavior activated, since we still want to unconditionally
anchor around the plugin's top-left in that use case.

* LayoutTests/pdf/two-pages-continuous-to-discrete-expected.html:

Address some flakiness.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDiscretePresentationController.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDiscretePresentationController.mm:
(WebKit::PDFDiscretePresentationController::pageIndexForCurrentView const):
(WebKit::PDFDiscretePresentationController::pdfPositionForCurrentView const): Deleted.
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFPresentationController.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFPresentationController.mm:
(WebKit::PDFPresentationController::pdfPositionForCurrentView const):
(WebKit::PD

--- a/LayoutTests/pdf/two-pages-continuous-to-discrete-expected.html
+++ b/LayoutTests/pdf/two-pages-continuous-to-discrete-expected.html
@@ -14,7 +14,7 @@
         testRunner.waitUntilDone();
         window.internals.registerPDFTest(async () => {
             internals.setPDFDisplayModeForTesting(pluginElement, "TwoUpDiscrete");
-            await UIHelper.renderingUpdate();
+            await UIHelper.ensureStablePresentationUpdate();
             testRunner.notifyDone();
         }, pluginElement);
     });
