ign.com: [macOS] `space` key does not pause video in fullscreen https://bugs.webkit.org/show_bug.cgi?id=286330 rdar://138037616
Reviewed by Jean-Yves Avenard.

The “Space key” initially also does not work in Chrome / Firefox, but clicking on the video makes the space key work there. It's not the case in Safari.

In Safari, you need to tab to the video. But in all cases, the video requires focus before the space key works.

To fix the behavior difference in Safari, we make the video mouse focusable to match Firefox / Chrome.

This effectively reverts 94794@main, given the outline it was removing is no longer there (since the introduction of `:focus-visible`). A test is also added
for the outline.

* LayoutTests/media/video-mouse-focus-expected.txt:
* LayoutTests/media/video-mouse-focus.html:
* LayoutTests/platform/ios/TestExpectations:
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::isMouseFocusable const): Deleted.
* Source/WebCore/html/HTMLMediaElement.h:

Canonical link: https://commits.webkit.org/289220@main

--- a/LayoutTests/media/video-mouse-focus.html
+++ b/LayoutTests/media/video-mouse-focus.html
@@ -18,13 +18,15 @@
                 eventSender.mouseDown();
                 eventSender.mouseUp();
 
-                testExpected("document.activeElement.id", "video", "!=");
+                testExpected("document.activeElement.id", "video");
+                testExpected("getComputedStyle(video).outlineStyle", "none");
+                testExpected("getComputedStyle(video).outlineWidth", "0px");
                 endTest();
             };
         </script>
     </head>
     <body onload="startTest();">
-        <p>This tests that a mouse click event will not cause a media element to gain focus.</p>
+        <p>This tests that a mouse click event will cause a media element to gain focus without displaying an outline.</p>
         <video id="video" controls></video>
     </body>
 </html>
