[GStreamer] Enable vp9 playback test https://bugs.webkit.org/show_bug.cgi?id=286349
Reviewed by Xabier Rodriguez-Calvar.

* LayoutTests/media/vp9.html: There's no reason for skipping the vp9 playback test, we have a
decoder for this codec.

Canonical link: https://commits.webkit.org/289284@main

--- a/LayoutTests/media/vp9.html
+++ b/LayoutTests/media/vp9.html
@@ -14,7 +14,7 @@ test(() => {
 }, "HTMLMediaElement.canPlay VP9");
 
 promise_test(async() => {
-    if (window.internals && !window.internals.usingGStreamer() && !window.internals.usingAppleInternalSDK())
+    if (window.internals && !window.internals.usingAppleInternalSDK())
         return;
     await video.play();
     assert_equals(video.videoWidth, 640);
