[UnifiedPDF] Upstream some platform availability/enablement information https://bugs.webkit.org/show_bug.cgi?id=286201 rdar://143172293
Reviewed by Tim Horton.

This patch upstreams some build flags pertaining to macOS 15.2.

* LayoutTests/accessibility/mac/basic-embed-pdf-accessibility.html:
* LayoutTests/pdf/fullscreen.html:
Adopt the PDF fade-in delay and "register PDF test callback" approach
for writing PDF plugin tests.
* LayoutTests/pdf/fullscreen.html:
* Source/WTF/wtf/PlatformEnableCocoa.h:
* Source/WTF/wtf/PlatformHave.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::installPDFDocument):
Ensure the PDF test callbacks are also executed in legacy PDF plugin.

Canonical link: https://commits.webkit.org/289305@main

--- a/LayoutTests/accessibility/mac/basic-embed-pdf-accessibility.html
+++ b/LayoutTests/accessibility/mac/basic-embed-pdf-accessibility.html
@@ -18,7 +18,8 @@ if (window.accessibilityController) {
     window.jsTestIsAsync = true;
 
     var hitTestResult, pdfAxObject, pdfEmbedElement, pdfPageObject, searchResultElement;
-    setTimeout(async function() {
+    internals?.registerPDFTest(async () => {
+        await UIHelper.waitForPDFFadeIn();
         await waitFor(() => {
             embedContainer = accessibilityController.accessibleElementById("embedContainer");
             return embedContainer && embedContainer.childrenCount >= 1;
@@ -79,7 +80,7 @@ if (window.accessibilityController) {
 
         debug(output);
         finishJSTest();
-    }, 0);
+    }, plugin);
 }
 </script>
 </body>
