REGRESSION(288409@main): Main frame history state may be incorrectly created after navigating back https://bugs.webkit.org/show_bug.cgi?id=286438 rdar://143418935
Reviewed by Alex Christensen.

FrameLoader::loadURLIntoChildFrame contains logic to reload child frames with history items from another
page when navigating through the back/forward list. This behavior caused an issue after 288409@main,
where loading a history item created by another page into a new iframe caused the UI process to create a
new main frame history item when trying to reconstruct the history item tree.

To fix this, we need to update the history item’s frameID to match the iframe that it is being loaded
into.

* LayoutTests/fast/history/go-back-then-navigate-subframe-expected.txt: Added.
* LayoutTests/fast/history/go-back-then-navigate-subframe.html: Added.
* LayoutTests/fast/history/resources/frame-final-url.html:
* LayoutTests/fast/history/resources/frame-initial-url.html:
* Source/WebCore/history/HistoryItem.cpp:
(WebCore::HistoryItem::setFrameID):
* Source/WebCore/history/HistoryItem.h:
(WebCore::HistoryItem::setFrameID): Deleted.
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadURLIntoChildFrame):

Canonical link: https://commits.webkit.org/289329@main

--- a/LayoutTests/fast/history/resources/frame-final-url.html
+++ b/LayoutTests/fast/history/resources/frame-final-url.html
@@ -1,5 +1,6 @@
 final page contents
 <script>
-alert('Final URL loaded.');
+if (location.hash != "#noalert")
+    alert('Final URL loaded.');
 top.runTest();
 </script>
