--- a/LayoutTests/fast/history/resources/frame-initial-url.html
+++ b/LayoutTests/fast/history/resources/frame-initial-url.html
@@ -1,5 +1,6 @@
 initial frame contents
 <script>
-alert('Initial URL loaded.');
-window.location='frame-final-url.html';
+if (location.hash != "#noalert")
+    alert('Initial URL loaded.');
+window.location='frame-final-url.html' + location.hash;
 </script>
