--- a/LayoutTests/editing/input/scroll-to-edge-if-line-break-at-end-of-document-contenteditable.html
+++ b/LayoutTests/editing/input/scroll-to-edge-if-line-break-at-end-of-document-contenteditable.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <div>When the caret is scrolled out and resides at the end of the contenteditable,
-on pressing &quot;Ctrl+Return&quot; it must be scrolled to the bottom of the view,
+on inserting a line break it must be scrolled to the bottom of the view,
 not to the center to avoid undesirable content view jumping.</div>
 <div style="height:1000px;">
   <div style="overflow:visible; height:100px;" contenteditable="true" id="input"></div>
@@ -14,6 +14,5 @@ if (window.testRunner)
    testRunner.dumpAsText();
 
 performJumpAtTheEdgeTest(true);
-
 </script>
 </body>
