--- a/LayoutTests/http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable.html
+++ b/LayoutTests/http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable.html
@@ -32,7 +32,7 @@
         if (context) {
             context.fillStyle = "#ff0000";
             context.fillRect(0, 0, 200, 200);
-            if (Date.now() - drawStartTime < 500) {
+            if (Date.now() - drawStartTime < 1000) {
                 window.requestAnimationFrame(doRedImageDraw);
             } else {
                 drawStartTime = Date.now();
@@ -51,7 +51,15 @@
         }
     }
 
-    async_test(t => {
+    function waitForEvent(object, eventName, testName)
+    {
+        return new Promise((resolve, reject) => {
+            object.addEventListener(eventName, (e) => resolve(e), { once: true });
+            setTimeout(() => reject("waitForEvent " + (testName ? (testName + " ") : "") + "timed out for " + eventName), 2500);
+        });
+    }
+
+    promise_test(async (test) => {
         const ac = new AudioContext();
         const osc = ac.createOscillator();
         const dest = ac.createMediaStreamDestination();
@@ -64,48 +72,47 @@
         video.addTrack(audio.getAudioTracks()[0]);
         assert_equals(video.getAudioTracks().length, 1, "video mediastream starts with one audio track");
         const recorder = new MediaRecorder(video);
-        let mode = 0;
-
-        recorder.ondataavailable = t.step_func(blobEvent => {
-            assert_true(blobEvent instanceof BlobEvent, 'the type of event should be BlobEvent');
-            assert_equals(blobEvent.type, 'dataavailable', 'the event type should be dataavailable');
-            assert_true(blobEvent.isTrusted, 'isTrusted should be true when the event is created by C++');
-            assert_true(blobEvent.data instanceof Blob, 'the type of data should be Blob');
-            assert_true(blobEvent.data.size > 0, 'the blob should contain some buffers');
-            player.src = window.URL.createObjectURL(blobEvent.data);
-            const resFrame = document.getElementById("frame");
-            const resContext = resFrame.getContext('2d');
-
-            player.oncanplay = t.step_func(() => {
-                assert_greater_than(player.duration, 0.1, 'the duration should be greater than 100ms');
-                player.play();
-            });
-            player.onplay = () => {
-                player.pause();
-                player.currentTime = 0.05;
-            };
-            player.onseeked = t.step_func(() => {
-                resContext.drawImage(player, 0, 0);
-                if (!mode) {
-                    _assertPixelApprox(resFrame, 25, 25, 255, 0, 0, 255, "25, 25", "255, 0, 0, 255", 50);
-                    _assertPixelApprox(resFrame, 50, 50, 255, 0, 0, 255, "50, 50", "255, 0, 0, 255", 50);
-                    mode = 1;
-                    player.currentTime = Math.min(1.5, player.duration - 0.05);
-                } else {
-                    _assertPixelApprox(resFrame, 20, 20, 0, 255, 0, 255, "20, 20", "0, 255, 0, 255", 50);
-                    _assertPixelApprox(resFrame, 199, 199, 0, 255, 0, 255, "199, 199", "0, 255, 0, 255", 50);
-                    t.done();
-                }
-            });
-            player.load();
-        });
         drawStartTime = Date.now();
         doRedImageDraw();
         recorder.start();
         assert_equals(recorder.state, 'recording', 'MediaRecorder has been started successfully');
-        setTimeout(() => {
-            recorder.stop();
-        }, 2000);
+        setTimeout(() => { recorder.stop(); }, 2000);
+
+        const blobEvent = await waitForEvent(recorder, 'dataavailable');
+        assert_true(blobEvent instanceof BlobEvent, 'the type of event should be BlobEvent');
+        assert_equals(blobEvent.type, 'dataavailable', 'the event type should be dataavailable');
+        assert_true(blobEvent.isTrusted, 'isTrusted should be true when the event is created by C++');
+        assert_true(blobEvent.data instanceof Blob, 'the type of data should be Blob');
+        assert_true(blobEvent.data.size > 0, 'the blob should contain some buffers');
+
+        const MediaSource = self.ManagedMediaSource || self.MediaSource;
+        player.disableRemotePlayback = true;
+        const source = new MediaSource();
+        player.src = URL.createObjectURL(source);
+        await waitForEvent(source, 'sourceopen');
+        const sourceBuffer = source.addSourceBuffer("video/mp4");
+        sourceBuffer.appendBuffer(await blobEvent.data.arrayBuffer());
+        await waitForEvent(sourceBuffer, 'updateend');
+        source.endOfStream();
+
+        const resFrame = document.getElementById("frame");
+        const resContext = resFrame.getContext('2d');
+
+        assert_greater_than(player.duration, 1, 'the duration should be greater than 1s');
+        await player.play();
+
+        player.pause();
+        player.currentTime = Math.min(1.5, player.duration - 0.05);
+        await waitForEvent(player, 'seeked');
+        resContext.drawImage(player, 0, 0);
+        _assertPixelApprox(resFrame, 20, 20, 0, 255, 0, 255, "20, 20", "0, 255, 0, 255", 50);
+        _assertPixelApprox(resFrame, 199, 199, 0, 255, 0, 255, "199, 199", "0, 255, 0, 255", 50);
+
+        player.currentTime = 0;
+        await waitForEvent(player, 'seeked');
+        resContext.drawImage(player, 0, 0);
+        _assertPixelApprox(resFrame, 25, 25, 255, 0, 0, 255, "25, 25", "255, 0, 0, 255", 50);
+        _assertPixelApprox(resFrame, 50, 50, 255, 0, 0, 255, "50, 50", "255, 0, 0, 255", 50);
     }, 'MediaRecorder can successfully record the video for a audio-video stream');
 
 </script>
