Align `selectorText` to not serialize `@page` and not be nullable  as per Web Specification
https://bugs.webkit.org/show_bug.cgi?id=271432
rdar://125588212

Reviewed by Darin Adler.

This patch aligns WebKit with Web Specification [1] & [2]:

[1] https://drafts.csswg.org/cssom/#dom-csspagerule-selectortext
[2] https://drafts.csswg.org/cssom/#csspagerule

As per Web Specification, it should not append `@page`, so now
it serialize correctly. Similarly, it should not be nullable.

This patch also syncs WPT tests (not printing specific) below:

Upstream commit: https://github.com/web-platform-tests/wpt/commit/c72ee0c082d350b8b44f7a6bac1f028752b13527

* Source/WebCore/css/CSSPageRule.cpp:
(WebCore::CSSPageRule::selectorText const):
(WebCore::CSSPageRule::cssText const):
* Source/WebCore/css/CSSPageRule.idl:

> Rebaselines (Local Tests)
* LayoutTests/http/wpt/cssom/CSSPageRule.html: Updated
* LayoutTests/fast/dom/css-element-attribute-js-null-expected.txt: Synced from Blink Source
* LayoutTests/fast/dom/css-element-attribute-js-null.html: Synced from Blink Source

> WPT Tests Update & Sync:
* LayoutTests/imported/w3c/resources/import-expectations.json:
* * LayoutTests/imported/w3c/web-platform-tests/css/cssom/cssom-pagerule.html: Extended for `cssText` cases as well
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/cssom-pagerule-expected.txt: Rebaselined
* LayoutTests/imported/w3c/web-platform-tests/css/css-page/cssom/margin-001-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-page/cssom/margin-001.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-page/cssom/margin-002-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-page/cssom/margin-002.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-page/cssom/margin-003-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-page/cssom/margin-003.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-page/cssom/page-001-expected.txt:
* LayoutTests/impo

--- a/LayoutTests/fast/dom/css-element-attribute-js-null.html
+++ b/LayoutTests/fast/dom/css-element-attribute-js-null.html
@@ -9,7 +9,8 @@
         @media screen {
             .bar { color: blue; }
         }
-        </style>
+        @page { }
+    </style>
     <script>
         function printOut(msg) {
             var console = document.getElementById("console");
@@ -50,10 +51,10 @@
             var rules = document.styleSheets[1].cssRules;
 
             var rule = rules[0];
-            var mediaRule = rules[1];            
+            var mediaRule = rules[1];
+            var pageRule = rules[2];
             var style = rule.style;
             var mediaList = mediaRule.media;
-
 
             var listing = [
                 {
@@ -65,10 +66,17 @@
                     ]
                 },
                 {
+                    type: 'CSSPageRule',
+                    elementToUse: pageRule,
+                    attributes: [
+                        {name: 'selectorText', expectedNull: 'null'}
+                    ]
+                },
+                {
                     type: 'CSSStyleRule',
                     elementToUse: rule,
                     attributes: [
-                         {name: 'selectorText', expectedNull: 'null'}
+                        {name: 'selectorText', expectedNull: 'null'}
                     ]
                 },
                 {
@@ -86,15 +94,8 @@
                         {name: 'mediaText', expectedNull: ''}
                     ]
                 }
-                // ,{
-                //     type: 'PageRule',
-                //     elementToUse: mediaList,
-                //     attributes: [
-                //         {name: 'cssText', expectedNull: ''}
-                //     ]
-                // }
             ];
-            
+
             for (element in listing) {
                 var type = listing[element].type;
                 var elementToUse = listing[element].elementToUse;
