--- a/LayoutTests/http/wpt/cssom/CSSPageRule.html
+++ b/LayoutTests/http/wpt/cssom/CSSPageRule.html
@@ -55,7 +55,7 @@
     }, "Existence and type of CSSPageRule attributes");
 
     test(function() {
-        assert_equals(rule.selectorText, "@page :left");
+        assert_equals(rule.selectorText, ":left");
         assert_true(rule.style instanceof CSSStyleDeclaration);
     }, "Values of CSSPageRule attributes");
 
