--- a/LayoutTests/fast/dom/set-attribute-and-normalize-in-event.html
+++ b/LayoutTests/fast/dom/set-attribute-and-normalize-in-event.html
@@ -1,3 +1,4 @@
+<!doctype html><!-- webkit-test-runner [ dumpJSConsoleLogInStdErr=true ] -->
 <script>
     function runTest() {
         if (window.testRunner)
@@ -13,5 +14,7 @@
 </script>
 
 <body onload=runTest()>
+This test passes if it does not crash.
+
     <marquee id="marqueeElement">
         <hr id="hrElement" width="1"></hr>
