Enforce m_rootPath for remaining DOMFileSystem file access https://bugs.webkit.org/show_bug.cgi?id=283117 rdar://139533231
Reviewed by Chris Dumez.

This is a follow-up to 276184@main where I added validation in
DOMFileSystem::get{Entry,File}. That missed the ability to leverage getParent
and listDirectory for testing if a directory exists. This patch closes that
hole.

* LayoutTests/http/tests/security/file-system-access-via-dataTransfer-expected.txt:
* LayoutTests/http/tests/security/file-system-access-via-dataTransfer.html:
* LayoutTests/platform/mac-wk1/http/tests/security/file-system-access-via-dataTransfer-expected.txt: Copied from LayoutTests/http/tests/security/file-system-access-via-dataTransfer-expected.txt.
* Source/WebCore/Modules/entriesapi/DOMFileSystem.cpp:
(WebCore::DOMFileSystem::listDirectory):
(WebCore::DOMFileSystem::getParent):

Originally-landed-as: 283286.586@safari-7620-branch (bddd7907adf8). rdar://143592706
Canonical link: https://commits.webkit.org/289479@main

--- a/LayoutTests/http/tests/security/file-system-access-via-dataTransfer.html
+++ b/LayoutTests/http/tests/security/file-system-access-via-dataTransfer.html
@@ -15,31 +15,44 @@ function runTest() {
     window.jsTestIsAsync = true;
 
     let path = location.pathname.split("/");
-    let targetFileName = internals.createTemporaryFile(`${path[path.length - 1]}`, "");
+    let filename = path[path.length - 1];
+    let targetFileName = internals.createTemporaryFile(`${filename}`, "");
+    let targetDirectory = targetFileName.substring(0, targetFileName.length - filename);
 
     let input = document.createElement("input");
     input.type = "file";
 
     let file = new File([], targetFileName, {"type":"text/plain"});
+    let directory = new File([], targetDirectory, {"type":"text/plain"});
 
     dataTransfer = new DataTransfer();
     dataTransfer.items.add(file)
+    dataTransfer.items.add(directory)
     input.files = dataTransfer.files;
+
+    let resultCount = 0;
 
     var functionOnSuccess = function (file)
     {
-        testFailed("Should not receive file");
-        finishJSTest()
+        testFailed("Received file");
+        if (resultCount == 2)
+            finishJSTest()
+        resultCount++;
     }
 
     var functionOnError = function (value)
     {
         testPassed("Should not receive file");
-        finishJSTest()
+        if (resultCount == 2)
+            finishJSTest()
+        resultCount++;
     }
 
     input.webkitEntries.forEach((entry) => {
         entry.file(functionOnSuccess, functionOnError)
+        entry.getParent(functionOnSuccess, functionOnError)
+        if (entry.isDirectory)
+            entry.createReader().readEntries(functionOnSuccess, functionOnError)
     });
 }
 
