REGRESSION(289305@main): [Sequoia Debug] accessibility/mac/scrolling-in-pdf-crash.html is timing out(failure in EWS) https://bugs.webkit.org/show_bug.cgi?id=286647 rdar://143784797
Reviewed by Wenson Hsieh.

In 289305@main, we applied some test fixes under accessibility/mac, but
it seems like we forgot to give this failing test the same treatment.
This patch addresses that mistake.

* LayoutTests/accessibility/mac/scrolling-in-pdf-crash.html:

Canonical link: https://commits.webkit.org/289489@main

--- a/LayoutTests/accessibility/mac/scrolling-in-pdf-crash.html
+++ b/LayoutTests/accessibility/mac/scrolling-in-pdf-crash.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script src="../../resources/js-test.js"></script>
+<script src="../../resources/ui-helper.js"></script>
 <script src="../../resources/accessibility-helper.js"></script>
 </head>
 <body>
@@ -16,8 +17,9 @@ if (window.accessibilityController) {
 
     var pageOne, pageTwo;
     var pdfAxObject, pdfLayerController;
-    requestAnimationFrame(async function() {
+    internals.registerPDFTest(async () => {
         await new Promise((resolve) => setTimeout(resolve, 0)); // Wait for the embed plugin to load after style update.
+        await UIHelper.waitForPDFFadeIn();
 
         await waitFor(() => {
             const embedElement = accessibilityController.accessibleElementById("pdfEmbed");
@@ -56,7 +58,7 @@ if (window.accessibilityController) {
 
         debug(output);
         finishJSTest();
-    });
+    }, plugin);
 }
 </script>
 </body>
