Remove InjectedBundlePageFullScreenClient rdar://143581808 https://bugs.webkit.org/show_bug.cgi?id=286491
Reviewed by Jer Noble.

It was only used for WebKitTestRunner.
This makes us test functionality that is closer to what users actually see.
It also moves our test infrastructure to the UI process, which makes it
more straightforward to test fullscreen with site isolation.

A few minimal test changes were needed.  First, in order to make delegate callbacks
that used to be synchronous happen in a deterministic order, I needed to add
a call to await testRunner.updatePresentation() in a few places because
WebFullScreenManagerProxy::beganEnterFullScreen has a call to
WebPageProxy::callAfterNextPresentationUpdate in it, so the client is not called
until after a presentation update.  The test fullscreen/exit-full-screen-video-crash.html
needed a testRunner.waitUntilDone/notifyDone pair because the promises that are awaited
are no longer resolved synchronously.  The test fullscreen/full-screen-enter-while-exiting.html
had a lot of custom test infrastructure in internals and testRunner that used the
injected bundle a lot.  I replaced it with a call to testRunner.waitBeforeFinishingFullscreenExit
and a call to testRunner.finishFullscreenExit after we verify that we hit the
webkitfullscreenerror callback that happens when an element fullscreen is requested
during the transition away from fullscreen, which error callback was added in
the change that introduced that test (231317@main).

A few WPT tests, especially in imported/w3c/web-platform-tests/html/semantics/popovers,
became flaky or fail in different ways now that the fullscreen API callbacks are actually
asynchronous.  These tests already show these issues on wpt.fyi.  This change
makes WebKitTestRunner more similar to a real browser, which reveals these failures.

* LayoutTests/fullscreen/event-listener-prefixed-unprefixed-document.html:
* LayoutTests/fullscreen/exit-full-screen-video-crash.html:
* LayoutTests/fullscr

--- a/LayoutTests/fullscreen/event-listener-prefixed-unprefixed-document.html
+++ b/LayoutTests/fullscreen/event-listener-prefixed-unprefixed-document.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="reftest-wait">
+<html>
 <style>
     #test {
         background-color: green;
@@ -9,14 +9,18 @@
 </style>
 <div id="test"></div>
 <script>
+if (window.testRunner) { testRunner.waitUntilDone() }
+
 document.addEventListener("webkitfullscreenchange", () => {
     test.style.backgroundColor = "red";
 });
-document.addEventListener("fullscreenchange", () => {
+document.addEventListener("fullscreenchange", async () => {
     if (document.fullscreenElement)
         document.exitFullscreen();
-    else
-        document.documentElement.classList.remove("reftest-wait");
+    else if (window.testRunner) {
+        await testRunner.updatePresentation();
+        testRunner.notifyDone();
+    }
 });
 if (window.internals) {
     internals.withUserGesture(() => {
