--- a/LayoutTests/fullscreen/full-screen-enter-while-exiting.html
+++ b/LayoutTests/fullscreen/full-screen-enter-while-exiting.html
@@ -12,56 +12,34 @@
             return;
         }
 
-        if (!window.testRunner) {
-            logResult(false, "This test requires Internals.");
+        if (!window.testRunner || !window.testRunner.isWebKit2) {
+            logResult(false, "This test requires WebKitTestRunner.");
             endTest();
             return;
         }
 
-        if (!testRunner.setEnterFullscreenForElementCallback) {
-            logResult(false, "This test requires WebKitTestRunner.")
-            endTest();
-            return;
-        }
-
-        testRunner.setHasCustomFullScreenBehavior(true);
-
-        let enterFullScreenPromise = new Promise(resolve => {
-            testRunner.setEnterFullscreenForElementCallback(resolve);
-        });
+        testRunner.waitBeforeFinishingFullscreenExit();
 
         consoleWrite('Enter fullscreen with target1');
         internals.withUserGesture(() => { run('target1.webkitRequestFullScreen()'); });
-
-        await enterFullScreenPromise;
-        
-        var changePromise = waitFor(target1, 'webkitfullscreenchange');
-        run('internals.webkitWillEnterFullScreenForElement(target1)');
-
-        await changePromise;
-
-        run('internals.webkitDidEnterFullScreenForElement(target1)');
-
-        let exitFullScreenPromise = new Promise(resolve => {
-            testRunner.setExitFullscreenForElementCallback(resolve);
-        });
+        await waitFor(target1, 'webkitfullscreenchange');
+        await testRunner.updatePresentation();
 
         consoleWrite('Exit fullscreen with target1');
         run('document.webkitExitFullscreen()');
-        await exitFullScreenPromise;
         changePromise = waitFor(document, 'webkitfullscreenchange')
-
-        run('internals.webkitWillExitFullScreenForElement(target1)');
+        await testRunner.updatePresentation();
 
         consoleWrite('Attempt to enter fullscreen with target2');
         internals.withUserGesture(() => { run('target2.webkitRequestFullScreen()'); });
 
         await waitFor(target2, 'webkitfullscreenerror');
 
-        run('internals.webkitDidExitFullScreenForElement(target1)');
-        await changePromise;
+        testRunner.finishFullscreenExit();
+        await testRunner.updatePresentation();
 
-        testRunner.setHasCustomFullScreenBehavior(false);
+        internals.withUserGesture(() => { run('target2.webkitRequestFullScreen()'); });
+        await waitFor(target2, 'webkitfullscreenchange');
 
         endTest();
     });
