REGRESSION(286883@main): ASSERT NOT REACHED in WebCore::toResourceLoadPriority(CFURLRequestPriority) rdar://140442183 https://bugs.webkit.org/show_bug.cgi?id=283596
Reviewed by Ryosuke Niwa.

This fixes the regression by setting a value for the priority that is within bounds, and prevents future asserts by clamping

* LayoutTests/ipc/cfnetwork-crashes-with-string-to-string-http-headers.html:
* LayoutTests/ipc/url-requestPriority-out-of-range-expected.txt: Added.
* LayoutTests/ipc/url-requestPriority-out-of-range.html: Copied from LayoutTests/ipc/cfnetwork-crashes-with-string-to-string-http-headers.html.
* Source/WebKit/Shared/Cocoa/CoreIPCNSURLRequest.mm:
(WebKit::CoreIPCNSURLRequest::toID const):

Canonical link: https://commits.webkit.org/289501@main

--- a/LayoutTests/ipc/url-requestPriority-out-of-range.html
+++ b/LayoutTests/ipc/url-requestPriority-out-of-range.html
@@ -38,20 +38,13 @@
                                         timeWindowDelay: 118,
                                         timeWindowDuration: 15,
                                         networkServiceType: 0,
-                                        requestPriority: 0,
+                                        // must be -1 to 4
+                                        requestPriority: 20,
                                         isHTTP: {
                                             optionalValue: true
                                         },
                                         httpMethod: {},
-                                        // This crashes CFNetwork
-                                        headerFields: {
-                                            optionalValue: [{
-                                                alias: ['A', {
-                                                    variantType: 'String',
-                                                    variant: location.href
-                                                }]
-                                            }]
-                                        },
+                                        headerFields: {},
                                         body: {
                                             optionalValue: {
                                                 dataReference: {}
