Digital Credentials: drop navigator.identity, use navigator.credentials instead https://bugs.webkit.org/show_bug.cgi?id=279159 rdar://135835222
Reviewed by Abrar Rahman Protyasha.

Drop the navigator.identity namespace, and do everything through navigator.credentials instead.

Fix Credentials Container's create method to resolve a null, per spec default create algorithm:
https://www.w3.org/TR/credential-management-1/#algorithm-create-cred

Spec change:
https://github.com/WICG/digital-credentials/pull/164

Web platform Tests Upstream commit:
https://github.com/web-platform-tests/wpt/commit/fd7b0de1938f9ed8abe3974803ddd2196c5880f0

* LayoutTests/http/wpt/identity/identitycredentialscontainer-create-basics.https-expected.txt: Removed.
* LayoutTests/http/wpt/identity/identitycredentialscontainer-create-basics.https.html: Removed.
* LayoutTests/http/wpt/identity/identitycredentialscontainer-get-basics.https-expected.txt:
* LayoutTests/http/wpt/identity/identitycredentialscontainer-get-basics.https.html:
* LayoutTests/http/wpt/identity/identitycredentialscontainer-get-hidden.https-expected.txt:
* LayoutTests/http/wpt/identity/identitycredentialscontainer-get-hidden.https.html:
* LayoutTests/http/wpt/identity/identitycredentialscontainer-store-basics.https-expected.txt: Removed.
* LayoutTests/http/wpt/identity/identitycredentialscontainer-store-basics.https.html: Removed.
* LayoutTests/http/wpt/identity/idl.https-expected.txt:
* LayoutTests/http/wpt/identity/idl.https.html:
* LayoutTests/http/wpt/identity/setDigitalCredentialsEnable.https.html:
* LayoutTests/imported/w3c/web-platform-tests/credential-management/credentialscontainer-create-basics.https-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/credential-management/credentialscontainer-create-basics.https.html:
* LayoutTests/imported/w3c/web-platform-tests/digital-credentials/META.yml:
* LayoutTests/imported/w3c/web-platform-tests/digital-credentials/allow-attribute.https-expected.txt:
* LayoutTests/import

--- a/LayoutTests/http/wpt/identity/setDigitalCredentialsEnable.https.html
+++ b/LayoutTests/http/wpt/identity/setDigitalCredentialsEnable.https.html
@@ -34,9 +34,6 @@
 
         async function checkIFrame(iframe) {
             const iframeWindow = iframe.contentWindow;
-            if ("identity" in iframeWindow.navigator) {
-                console.log("FAIL: identity disabled by preference.");
-            }
 
             if ("DigitalCredential" in iframeWindow) {
                 console.log(
@@ -71,35 +68,24 @@
                 );
             }
 
-            const { identity } = window.navigator;
-            if (!identity) {
+            if (window.navigator.identity) {
                 console.log(
-                    "FAIL: navigator.identity must be exposed. Was enabled by pref."
+                    "FAIL: navigator.identity was removed from the spec!"
                 );
             }
 
-            const isInstanceOfCredentialContainer =
-                identity instanceof window.CredentialsContainer;
-            if (!isInstanceOfCredentialContainer) {
-                console.log(
-                    "FAIL: navigator.identity must be and instance of CredentialsContainer."
-                );
-            }
-
-            const isInstanceOfDigitalCredential =
-                window.DigitalCredential.prototype instanceof window.Credential;
-            if (!isInstanceOfDigitalCredential) {
+            if (!window.DigitalCredential.prototype instanceof window.Credential) {
                 console.log(
                     "FAIL: DigitalCredential's prototype interface must be an instance of Credential."
                 );
             }
 
             try {
-                await identity.get({ digital: "" });
+                await window.navigator.credentials.get({ digital: "" });
             } catch (err) {
                 if (err.name !== "TypeError") {
                     console.log(
-                        `FAIL: navigator.identity.get() must reject with an TypeError. Got ${err.name} instead.`
+                        `FAIL: navigator.credentials.get() must reject with an TypeError. Got ${err.name} instead.`
                     );
                 }
             }
