--- a/LayoutTests/imported/w3c/web-platform-tests/credential-management/credentialscontainer-create-basics.https.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/credential-management/credentialscontainer-create-basics.https.html
@@ -3,14 +3,14 @@
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <script>
-promise_test(function(t) {
-    return promise_rejects_dom(t, "NotSupportedError",
-            navigator.credentials.create());
+promise_test(async function(t) {
+    const result = await navigator.credentials.create();
+    assert_equals(result, null, "By default algorithm, it returns null");
 }, "navigator.credentials.create() with no argument.");
 
-promise_test(function(t) {
-    return promise_rejects_dom(t, "NotSupportedError",
-            navigator.credentials.create({}));
+promise_test(async function(t) {
+    const result = await navigator.credentials.create({});
+    assert_equals(result, null, "By default algorithm, it returns null");
 }, "navigator.credentials.create() with empty argument.");
 
 promise_test(function(t) {
