--- a/LayoutTests/imported/w3c/web-platform-tests/permissions-policy/resources/digital-credentials-get.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/permissions-policy/resources/digital-credentials-get.html
@@ -11,7 +11,7 @@
         }
         let enabled = undefined;
         try {
-            await navigator.identity.get(makeGetOptions([]));
+            await navigator.credentials.get(makeGetOptions([]));
         } catch (e) {
             switch (e.name) {
                 case "NotAllowedError":
@@ -27,6 +27,7 @@
             window.parent.postMessage({ type, enabled }, "*");
         }
     }
+    test_driver.set_test_context(parent);
     window.onload = notify;
 </script>
 <body>
