--- a/LayoutTests/http/wpt/identity/idl.https.html
+++ b/LayoutTests/http/wpt/identity/idl.https.html
@@ -4,10 +4,6 @@
 <script src=/resources/WebIDLParser.js></script>
 <script src=/resources/idlharness.js></script>
 <script type="text/plain" id="tested">
-partial interface Navigator {
-    [SecureContext, SameObject] readonly attribute CredentialsContainer identity;
-};
-
 partial dictionary CredentialRequestOptions {
     DigitalCredentialRequestOptions digital;
 };
@@ -36,7 +32,7 @@ interface DigitalCredential : Credential {
             idl_array.add_idls(document.querySelector('#tested').textContent);
             idl_array.add_untested_idls("interface Element {};");
             idl_array.add_objects({
-                CredentialsContainer: ['navigator.identity']
+                CredentialsContainer: ['navigator.credentials']
             });
         }
     );
