--- a/LayoutTests/imported/w3c/web-platform-tests/digital-credentials/get-user-activation.https.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/digital-credentials/get-user-activation.https.html
@@ -14,25 +14,30 @@
       navigator.userActivation.isActive,
       "User activation should not be active"
     );
-    const options = makeGetOptions([]);
+    const options = makeGetOptions("openid4vp");
     await promise_rejects_dom(
       t,
       "NotAllowedError",
-      navigator.identity.get(options)
+      navigator.credentials.get(options)
     );
-  }, "navigator.identity.get() calling the API without user activation should reject with NotAllowedError.");
+  }, "navigator.credentials.get() calling the API without user activation should reject with NotAllowedError.");
 
   promise_test(async (t) => {
     await test_driver.bless();
+    const abort = new AbortController();
+    const options = makeGetOptions("openid4vp");
+    options.signal = abort.signal;
     assert_true(
       navigator.userActivation.isActive,
       "User activation should be active after test_driver.bless()."
     );
-    const options = makeGetOptions([]);
-    await promise_rejects_js(t, TypeError, navigator.identity.get(options));
+
+    const getPromise = navigator.credentials.get(options);
+    abort.abort();
+    await promise_rejects_dom(t, "AbortError", getPromise);
     assert_false(
       navigator.userActivation.isActive,
-      "User activation should be consumed after navigator.identity.get()."
+      "User activation should be consumed after navigator.credentials.get()."
     );
-  }, "navigator.identity.get() consumes user activation.");
+  }, "navigator.credentials.get() consumes user activation.");
 </script>
