--- a/LayoutTests/imported/w3c/web-platform-tests/digital-credentials/support/iframe.html
+++ b/LayoutTests/imported/w3c/web-platform-tests/digital-credentials/support/iframe.html
@@ -27,13 +27,11 @@
       }
       data.options.signal = abortController.signal;
     }
-    if (data.needsActivation) {
-      await test_driver.bless("user activation", null, window);
+    if (data.needsActivation && !navigator.userActivation.isActive) {
+      await test_driver.bless("user activation");
     }
     let result;
     try {
-      /** @type {CredentialsContainer} */
-      const identity = navigator.identity;
       if (data.abort === "before") {
         abortController.abort();
       }
@@ -43,13 +41,13 @@
           promise = Promise.resolve("pong");
           break;
         case "create":
-          promise = identity.create(data.options);
+          promise = navigator.credentials.create(data.options);
           break;
         case "get":
-          promise = identity.get(data.options);
+          promise = navigator.credentials.get(data.options);
           break;
         case "preventSilentAccess":
-          promise = identity.preventSilentAccess();
+          promise = navigator.credentials.preventSilentAccess();
           break;
         default:
           throw new Error(
@@ -71,5 +69,6 @@
     }
   }
 
+  test_driver.set_test_context(parent);
   window.addEventListener("message", messageListener);
 </script>
