Web Inspector: Use safer flag when copying request as cURL in Network tab https://bugs.webkit.org/show_bug.cgi?id=283718 rdar://139882082
Reviewed by Anne van Kesteren.

Do not treat file-like paths like actual file paths.

* Source/WebInspectorUI/UserInterface/Models/Resource.js:
(WI.Resource):

Originally-landed-as: 283286.565@safari-7620-branch (b52d52d68061). rdar://143593825
Canonical link: https://commits.webkit.org/289568@main

--- a/LayoutTests/http/tests/inspector/network/copy-as-curl.html
+++ b/LayoutTests/http/tests/inspector/network/copy-as-curl.html
@@ -184,7 +184,7 @@ function test()
 
                 InspectorTest.expectThat(curl[1] === "-X 'PUT'", "Command should be a PUT request.");
                 InspectorTest.expectThat(curl.find((cmd) => cmd.includes('Content-Type')) === "-H 'Content-Type: application/json'", "Command should have JSON Content-Type.");
-                InspectorTest.expectThat(curl.find((cmd) => cmd === "--data-binary '{\"update\":\"now\"}'") !== undefined, "Command should contain correct JSON data.");
+                InspectorTest.expectThat(curl.find((cmd) => cmd === "--data-raw '{\"update\":\"now\"}'") !== undefined, "Command should contain correct JSON data.");
             })
             .then(resolve, reject);
 
