navigator.mediaDevices.getUserMedia({ audio: { echoCancellation: { exact : false } } }) is failing with OverConstrained error rdar://143820857 https://bugs.webkit.org/show_bug.cgi?id=286680
Reviewed by Jean-Yves Avenard

Echo cancellation can have 3 values (on, off and support for both).
Before the patch, it would have only 2 values, meaning for supporting both would not be correctly handled for the fitness computation.
We update the code to handle all 3 values of echo cancellation support and update the fitness computation accordingly.

We also update how we apply constraints for devices that do not support both on and off values.

Covered by added test.

* LayoutTests/fast/mediastream/getUserMedia-echoCancellation-expected.txt:
* LayoutTests/fast/mediastream/getUserMedia-echoCancellation.html:
* Source/WebCore/Modules/mediastream/MediaTrackCapabilities.cpp:
(WebCore::capabilityBooleanVector):
* Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp:
(WebCore::RealtimeMediaSource::fitnessDistance):
(WebCore::booleanSettingFromConstraint):
(WebCore::RealtimeMediaSource::applyConstraint):
* Source/WebCore/platform/mediastream/RealtimeMediaSourceCapabilities.h:
* Source/WebCore/platform/mediastream/gstreamer/GStreamerAudioCaptureSource.cpp:
* Source/WebCore/platform/mediastream/mac/CoreAudioCaptureSource.cpp:
(WebCore::CoreAudioCaptureSource::createForTesting):
(WebCore::CoreAudioCaptureSource::capabilities):
* Source/WebCore/platform/mediastream/mac/CoreAudioCaptureSource.h:
* Source/WebCore/platform/mediastream/mac/MockAudioSharedUnit.mm:
(WebCore::MockRealtimeAudioSource::create):
* Source/WebCore/platform/mock/MockMediaDevice.h:
* Source/WebCore/platform/mock/MockRealtimeAudioSource.cpp:
(WebCore::m_timer):
(WebCore::MockRealtimeAudioSource::capabilities):
* Source/WebCore/platform/mock/MockRealtimeMediaSourceCenter.cpp:
(WebCore::defaultDevices):
* Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

Canonical link: https://commits.webkit.org/289609

--- a/LayoutTests/fast/mediastream/getUserMedia-echoCancellation.html
+++ b/LayoutTests/fast/mediastream/getUserMedia-echoCancellation.html
@@ -8,4 +8,33 @@ promise_test(async () => {
     const stream2 = await navigator.mediaDevices.getUserMedia({ audio: true });
     assert_true(stream2.getAudioTracks()[0].getSettings().echoCancellation);
 }, "echoCancellation should be on by default if not explictly disabled");
+
+promise_test(async () => {
+    const stream1 = await navigator.mediaDevices.getUserMedia({ audio: { echoCancellation: { exact : false } } });
+    assert_false(stream1.getAudioTracks()[0].getSettings().echoCancellation);
+}, "echoCancellation should be off with exact false echoCancellation");
+
+promise_test(async () => {
+    const stream0 = await navigator.mediaDevices.getUserMedia({ audio: true });
+    assert_true(stream0.getAudioTracks()[0].getSettings().echoCancellation);
+    assert_array_equals(stream0.getAudioTracks()[0].getCapabilities().echoCancellation, [true, false]);
+
+    const devices = await navigator.mediaDevices.enumerateDevices();
+    let deviceWithOnlyEchoCancellation, deviceWithoutEchoCancellation;
+    for (const device of devices) {
+        if (device.label === "Mock audio device 2")
+             deviceWithoutEchoCancellation = device;
+        else if (device.label === "Mock audio device 3")
+             deviceWithOnlyEchoCancellation = device;
+    }
+
+    const stream1 = await navigator.mediaDevices.getUserMedia({ audio: { deviceId : deviceWithOnlyEchoCancellation.deviceId } });
+    assert_true(stream1.getAudioTracks()[0].getSettings().echoCancellation);
+    assert_array_equals(stream1.getAudioTracks()[0].getCapabilities().echoCancellation, [true]);
+
+    const stream2 = await navigator.mediaDevices.getUserMedia({ audio: { deviceId : deviceWithoutEchoCancellation.deviceId } });
+    assert_false(stream2.getAudioTracks()[0].getSettings().echoCancellation);
+    assert_array_equals(stream2.getAudioTracks()[0].getCapabilities().echoCancellation, [false]);
+}, "Check capabilities with devices with only echo cancellation or without echo cancellation");
+
 </script>
