MediaRecorderPrivateEncoder can write frames out of order https://bugs.webkit.org/show_bug.cgi?id=286805 rdar://143956063
Reviewed by Youenn Fablet.

When we write to the container the video frame, we must first ensure that
we have written any earlier audio frames as WebM requires monotonically increasing timestamps.
To do so, the code could wait on in-flight audio frames prior writing the video.
However, if we paused or stopped the recorder, the waiting promise would be
immediately rejected which caused the video frame to be immediately written
only to drain/finish the audio converter which could retrieve audio frames
with a timestamp lesser than the video written.
This used to cause an assertion which was changed to a release log error instead in
287869@main.

Another issue was that it was assume we always had an audio frame with the same
presentation time as the latest video frame (as the audio clock drives the time)
However, if two video frames arrive in a burst before new audio is received
and to avoid having the video frames with the same timestamp we add 1us.
This could cause the wait for pending audio to never ends as this amended.

We can now remove some of the debug assertions we added in 287869@main and
re-introduce the ASSERT.

Added a test that exercising the code by creating a MediaRecorder with a short
timeslice.
* LayoutTests/http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable.html: Make oscillator variable global to get around webkit.org/b/271227
* LayoutTests/http/wpt/mediarecorder/MediaRecorder-webm-AV-audio-video-dataavailable-expected.txt: Added.
* LayoutTests/http/wpt/mediarecorder/MediaRecorder-webm-AV-audio-video-dataavailable.html: Added.
* Source/WebCore/platform/mediarecorder/MediaRecorderPrivateEncoder.cpp:
(WebCore::MediaRecorderPrivateEncoder::pause):
(WebCore::MediaRecorderPrivateEncoder::appendVideoFrame):
(WebCore::MediaRecorderPrivateEncoder::enqueueCompressedVideoFrame):
(WebCore::MediaRecorderPrivateEncoder::waitForM

--- a/LayoutTests/http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable.html
+++ b/LayoutTests/http/wpt/mediarecorder/MediaRecorder-AV-audio-video-dataavailable.html
@@ -21,6 +21,8 @@
 <script>
     var context;
     var drawStartTime;
+    // Needs to be a globabl variable to avoid being GCed (webkit.org/b/271227)
+    var oscillator;
 
     function createVideoStream() {
         const canvas = document.getElementById("canvas");
@@ -61,10 +63,11 @@
 
     promise_test(async (test) => {
         const ac = new AudioContext();
-        const osc = ac.createOscillator();
+        oscillator = ac.createOscillator();
         const dest = ac.createMediaStreamDestination();
         const audio = dest.stream;
-        osc.connect(dest);
+        oscillator.connect(dest);
+        oscillator.start();
 
         const video = createVideoStream();
         assert_equals(video.getAudioTracks().length, 0, "video mediastream starts with no audio track");
